crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@manifest_bad_hash_format.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
manifest:
- ERR variant=InvalidContentHashFormat gate=content_hash_canonical content_hash="sha256:0000000000000000000000000000000000000000000000000000000000000000"
