crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@manifest_bad_schema_version.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
manifest:
- ERR variant=UnsupportedSchemaVersion gate=manifest_schema_version_supported found=99 supported=1
