crates/selene-pack/tests/snapshots/pack_snapshot_corpus__corpus_snapshots_match@manifest_tier_mismatch.snap
---
source: crates/selene-pack/tests/pack_snapshot_corpus.rs
expression: snapshot.to_string()
---
manifest:
- ERR variant=MutabilityTierMismatch gate=tier_mutability_consistency name="demo.write" tier=Graph mutability=GraphWrite expected_tier=Mutation
